--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://drop_app_admin:drop_app_admin_password@localhost/drop_app_db
+sqlalchemy.url = ${DATABASE_URL}
 
 
 [post_write_hooks]
