--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.10.4
+pydantic-settings==2.7.0
 pydantic_core==2.27.2
 python-dotenv==1.0.1
 python-jose==3.3.0
